# homestay-backend

./: .pre-commit-config.yaml  README.md  create_user_from_terminal.py  main.py  pyproject.toml  requirements.txt  run_worker.py  seed_admin_user.py
.github/workflows/: ci.yml
app/: deps.py
app/api/: app_setting_route.py  attribute_route.py  auth_route.py  base_controller.py  company_route.py  location_route.py  profile_route.py  property_route.py  router.py  users_route.py
app/core/: config.py  create_indexes.py  database.py  exceptions.py  idempotency.py  json_utils.py  logging_config.py  redis.py  security.py
app/infrastructure/: outbox_publisher.py
app/middleware/: idempotency_route.py  jwt_middleware.py
app/models/: address_model.py  app_setting_model.py  attribute_model.py  coming_soon_setting_model.py  company_model.py  location_model.py  property_model.py  request.py  token_model.py  user_model.py
app/repositories/: __init__.py  address_repository.py  app_setting_repository.py  attribute_repository.py  base_repository.py  coming_soon_setting_repository.py  company_repository.py  location_repository.py  outbox_repository.py  property_repository.py  redis_token_repository.py  token_repository.py  user_repository.py
app/schemas/: app_setting_schema.py  attribute_schema.py  company_schema.py  location_schema.py  property_schema.py  response.py  user_schema.py
app/seeds/: __init__.py  (+1 more)
tests/: test_admin_user_seeder.py  test_api_utils.py  test_app_setting_response_builder.py  test_attribute_service.py  test_base_repository.py  test_coming_soon_use_case.py  test_create_indexes.py  test_create_property_use_case.py  test_deps.py  test_idempotency.py  test_location_service.py  test_property_dto.py  test_redis.py  test_route_regressions.py  test_security_fixes.py  test_token_service.py  test_user_list_request.py  test_user_schema_responses.py  test_user_service.py
(+87 files in other folders)
