[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.11.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-jose>=3.5.0",
    "ruff>=0.15.4",
    "uvicorn>=0.39.0",
]
