[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aioboto3>=15.5.0",
    "black>=25.11.0",
    "boto3>=1.40.61",
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "mailgun>=1.0.2",
    "brevo-python>=4.0.9",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "redis>=6.4.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "ruff>=0.15.4",
    "uvicorn>=0.39.0",
    "rq>=2.8.0",
    "maturin>=1.14.0",
]
